# magic-file-collection

./: .gitignore  Cargo.toml  README.md
config/: settings.toml
src/: main.rs
src/app_config/: mod.rs
src/watching/: mod.rs  offset.rs
