[package]
name = "magic-file-collection"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = {version = "1.25", features = ["full"]}
notify = "5.1.0"
futures = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
tracing-appender = "0.2"
config = "0.13"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
lazy_static = "1.4"